[package]
name = "sweepr"
version = "0.1.0"
edition = "2021"
description = "Blazing-fast dead code elimination for JavaScript and TypeScript"
license = "MIT"
repository = "https://github.com/user/sweepr"
authors = ["Sweepr Contributors"]

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Parsing & Semantic Analysis
oxc_allocator = "0.33"
oxc_parser = "0.33"
oxc_semantic = "0.33"
oxc_span = "0.33"
oxc_ast = "0.33"
oxc_diagnostics = "0.33"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Parallelism
rayon = "1.10"

# File system
ignore = "0.4"
walkdir = "2.5"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3.10"
